[gd_scene load_steps=20 format=3 uid="uid://doh0b47v1pmic"]

[ext_resource type="Script" uid="uid://bpdcwoukimpes" path="res://encounters/verity/level_spaces/solo_key_building/solo_key_building.gd" id="1_3jf8a"]
[ext_resource type="Script" uid="uid://bvo35yoewxri6" path="res://encounters/verity/level_spaces/level_geometry.gd" id="1_ngay2"]
[ext_resource type="PackedScene" uid="uid://dgj8cvuy4impl" path="res://systems/core/components/shape_spawner/shape_spawner.tscn" id="2_sgmor"]
[ext_resource type="PackedScene" uid="uid://85q2ix0badu6" path="res://encounters/verity/statues/statue_2d/statue_2d.tscn" id="4_as3xx"]
[ext_resource type="Script" uid="uid://b6woc1wjoadjh" path="res://systems/core/components/interaction/requirements/statue_2d_requirements/statue_2d_requirement.gd" id="5_rtsvd"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wijjm"]
albedo_color = Color(0.194349, 0.194349, 0.194349, 1)

[sub_resource type="QuadMesh" id="QuadMesh_wijjm"]
flip_faces = true
size = Vector2(65.94, 46.22)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ntyab"]
albedo_color = Color(0.505344, 0.505344, 0.505344, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_wijjm"]
size = Vector3(65.94, 46.22, 2)

[sub_resource type="QuadMesh" id="QuadMesh_tta1d"]
flip_faces = true
size = Vector2(65.94, 46.22)

[sub_resource type="BoxShape3D" id="BoxShape3D_tta1d"]
size = Vector3(65.94, 46.22, 2)

[sub_resource type="QuadMesh" id="QuadMesh_ntyab"]
flip_faces = true
size = Vector2(84.87, 46.22)

[sub_resource type="BoxShape3D" id="BoxShape3D_3eose"]
size = Vector3(84.87, 46.22, 2)

[sub_resource type="QuadMesh" id="QuadMesh_rl6iq"]
flip_faces = true
size = Vector2(84.87, 46.22)

[sub_resource type="BoxShape3D" id="BoxShape3D_ntyab"]
size = Vector3(84.87, 46.22, 2)

[sub_resource type="QuadMesh" id="QuadMesh_3eose"]
lightmap_size_hint = Vector2i(327, 420)
flip_faces = true
add_uv2 = true
size = Vector2(65.025, 83.76)

[sub_resource type="Resource" id="Resource_wijjm"]
resource_local_to_scene = true
script = ExtResource("5_rtsvd")

[sub_resource type="Resource" id="Resource_tta1d"]
resource_local_to_scene = true
script = ExtResource("5_rtsvd")

[sub_resource type="Resource" id="Resource_3eose"]
resource_local_to_scene = true
script = ExtResource("5_rtsvd")

[node name="SoloKeyBuilding" type="Node3D"]
process_mode = 3
script = ExtResource("1_3jf8a")

[node name="ShapeSpawner" parent="." instance=ExtResource("2_sgmor")]
unique_name_in_owner = true

[node name="LevelGeometry" type="Node3D" parent="."]
script = ExtResource("1_ngay2")

[node name="Spawns" type="Node3D" parent="LevelGeometry"]

[node name="PlayerSpawn" type="Marker3D" parent="LevelGeometry/Spawns"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.78038, 6.92097)

[node name="LeftShapeSpawn" type="Marker3D" parent="LevelGeometry/Spawns"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16.5198, 1.17274, -22.6136)

[node name="CenterShapeSpawn" type="Marker3D" parent="LevelGeometry/Spawns"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.591082, 4.09107, -6.67706)

[node name="RightShapeSpawn" type="Marker3D" parent="LevelGeometry/Spawns"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 19.7559, 1.17274, -22.6136)

[node name="LevelBox" type="Node3D" parent="LevelGeometry"]

[node name="Floor" type="CSGBox3D" parent="LevelGeometry/LevelBox"]
use_collision = true
size = Vector3(63.4383, 0.512695, 83.4775)
material = SubResource("StandardMaterial3D_wijjm")

[node name="StaticBodyBackWall" type="StaticBody3D" parent="LevelGeometry/LevelBox"]

[node name="BackWall" type="MeshInstance3D" parent="LevelGeometry/LevelBox/StaticBodyBackWall"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 22.176, 41.645)
visible = false
mesh = SubResource("QuadMesh_wijjm")
surface_material_override/0 = SubResource("StandardMaterial3D_ntyab")

[node name="CollisionShape3D" type="CollisionShape3D" parent="LevelGeometry/LevelBox/StaticBodyBackWall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 22.176, 42.645)
visible = false
shape = SubResource("BoxShape3D_wijjm")

[node name="StaticBodyFrontWall" type="StaticBody3D" parent="LevelGeometry/LevelBox"]

[node name="FrontWall" type="MeshInstance3D" parent="LevelGeometry/LevelBox/StaticBodyFrontWall"]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 22.176, -42.453)
visible = false
mesh = SubResource("QuadMesh_tta1d")
surface_material_override/0 = SubResource("StandardMaterial3D_ntyab")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="LevelGeometry/LevelBox/StaticBodyFrontWall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 22.176, -42.453)
visible = false
shape = SubResource("BoxShape3D_tta1d")

[node name="StaticBodyLeftWall" type="StaticBody3D" parent="LevelGeometry/LevelBox"]

[node name="LeftWall" type="MeshInstance3D" parent="LevelGeometry/LevelBox/StaticBodyLeftWall"]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -31.646, 22.176, 0)
visible = false
mesh = SubResource("QuadMesh_ntyab")
surface_material_override/0 = SubResource("StandardMaterial3D_ntyab")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="LevelGeometry/LevelBox/StaticBodyLeftWall"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -32.646, 22.176, 0)
visible = false
shape = SubResource("BoxShape3D_3eose")

[node name="StaticBodyRightWall" type="StaticBody3D" parent="LevelGeometry/LevelBox"]

[node name="RightWall" type="MeshInstance3D" parent="LevelGeometry/LevelBox/StaticBodyRightWall"]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 31.553, 22.176, 0)
visible = false
mesh = SubResource("QuadMesh_rl6iq")
surface_material_override/0 = SubResource("StandardMaterial3D_ntyab")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="LevelGeometry/LevelBox/StaticBodyRightWall"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 32.553, 22.176, 0)
visible = false
shape = SubResource("BoxShape3D_ntyab")

[node name="Ceiling" type="MeshInstance3D" parent="LevelGeometry/LevelBox"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 44.679, 0)
visible = false
mesh = SubResource("QuadMesh_3eose")
surface_material_override/0 = SubResource("StandardMaterial3D_ntyab")

[node name="CenterStructure" type="Node3D" parent="LevelGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.54346)

[node name="CSGTorus3D" type="CSGTorus3D" parent="LevelGeometry/CenterStructure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.70668, 10.8519)
use_collision = true
inner_radius = 2.21104
outer_radius = 3.227

[node name="CSGTorus3D2" type="CSGTorus3D" parent="LevelGeometry/CenterStructure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.63944, 10.8519)
use_collision = true
inner_radius = 2.84024
outer_radius = 3.74426

[node name="CSGTorus3D3" type="CSGTorus3D" parent="LevelGeometry/CenterStructure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.2984, 10.8519)
use_collision = true
inner_radius = 3.25201
outer_radius = 4.00968

[node name="CSGTorus3D4" type="CSGTorus3D" parent="LevelGeometry/CenterStructure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.97907, 10.8519)
use_collision = true
inner_radius = 4.26277
outer_radius = 5.29813

[node name="CSGTorus3D5" type="CSGTorus3D" parent="LevelGeometry/CenterStructure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.93486, 10.8519)
use_collision = true
inner_radius = 6.23936
outer_radius = 7.08327

[node name="CSGTorus3D6" type="CSGTorus3D" parent="LevelGeometry/CenterStructure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10.9297, 10.8519)
use_collision = true
inner_radius = 7.93587
outer_radius = 8.90789

[node name="CSGTorus3D7" type="CSGTorus3D" parent="LevelGeometry/CenterStructure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 13.2268, 10.8519)
use_collision = true
inner_radius = 10.3875
outer_radius = 11.9583

[node name="CSGSphere3D" type="CSGSphere3D" parent="LevelGeometry/CenterStructure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 14.4475, 10.8519)
use_collision = true
radius = 6.64343

[node name="Statues" type="Node3D" parent="LevelGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -15.6734)

[node name="LeftStatue" parent="LevelGeometry/Statues" instance=ExtResource("4_as3xx")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21.405, 0.243139, 1.74767)
interaction_behavior = SubResource("Resource_wijjm")

[node name="CenterStatue" parent="LevelGeometry/Statues" instance=ExtResource("4_as3xx")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0543628, 0.243141, 15.7204)
interaction_behavior = SubResource("Resource_tta1d")

[node name="RightStatue" parent="LevelGeometry/Statues" instance=ExtResource("4_as3xx")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22.2741, 0.243141, 1.77507)
interaction_behavior = SubResource("Resource_3eose")

[node name="BackArea" type="Node3D" parent="LevelGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -15.6734)

[node name="RaisedFloor" type="Node3D" parent="LevelGeometry/BackArea"]

[node name="MiddleRaised" type="CSGBox3D" parent="LevelGeometry/BackArea/RaisedFloor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0658741, 1.85222, 4.3705)
use_collision = true
size = Vector3(16.6663, 3.20511, 17.4072)

[node name="LeftStairs" type="CSGPolygon3D" parent="LevelGeometry/BackArea/RaisedFloor"]
transform = Transform3D(-1, 0, 0, 0, 1, 0, 0, 0, -1, -8.3947, 0.22525, 3.25906)
use_collision = true
polygon = PackedVector2Array(0, 0, 0, 3.23, 8.889, 0)
depth = 8.77

[node name="RightStairs" type="CSGPolygon3D" parent="LevelGeometry/BackArea/RaisedFloor"]
transform = Transform3D(1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, 1, 8.26661, 0.22525, 12.3487)
use_collision = true
polygon = PackedVector2Array(0, 0, 0, 3.229, 8.889, 0)
depth = 8.77

[node name="Obstacles" type="Node3D" parent="LevelGeometry/BackArea/RaisedFloor"]

[node name="FrontLeftHalfWall" type="CSGBox3D" parent="LevelGeometry/BackArea/RaisedFloor/Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.62353, 5.72378, 12.6219)
use_collision = true
size = Vector3(3.57703, 4.5816, 0.867676)

[node name="FrontRightHalfWall" type="CSGBox3D" parent="LevelGeometry/BackArea/RaisedFloor/Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.42397, 5.72378, 12.6374)
use_collision = true
size = Vector3(3.57703, 4.5816, 0.867676)

[node name="CenterBlock" type="CSGCylinder3D" parent="LevelGeometry/BackArea/RaisedFloor/Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.245819, 4.4371, 4.23854)
use_collision = true
radius = 2.57066
height = 5.08017

[node name="BackRightTallBlock" type="CSGBox3D" parent="LevelGeometry/BackArea/RaisedFloor/Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.99518, 4.31243, 1.71388)
use_collision = true
size = Vector3(3.61316, 8.34395, 4.23856)

[node name="BackLeftTallBlock" type="CSGBox3D" parent="LevelGeometry/BackArea/RaisedFloor/Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.75284, 4.31243, 1.71388)
use_collision = true
size = Vector3(3.61316, 8.34395, 4.23856)

[node name="BackLeftHalfWall" type="CSGBox3D" parent="LevelGeometry/BackArea/RaisedFloor/Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.68841, 5.74596, -3.81473)
use_collision = true
size = Vector3(3.57703, 4.5816, 0.867676)

[node name="BackRightHalfWall" type="CSGBox3D" parent="LevelGeometry/BackArea/RaisedFloor/Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.27182, 5.74596, -3.81473)
use_collision = true
size = Vector3(3.57703, 4.5816, 0.867676)

[node name="LeftRaisedAlcove" type="Node3D" parent="LevelGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31.7577, 0, 11.6483)

[node name="Platform" type="CSGBox3D" parent="LevelGeometry/LeftRaisedAlcove"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.6781, 4.46686, 0.98916)
use_collision = true
size = Vector3(7.13013, 9.93372, 32.5324)

[node name="RightRaisedAlcove" type="Node3D" parent="LevelGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 31.6981, 0, 11.648)

[node name="Platform" type="CSGBox3D" parent="LevelGeometry/RightRaisedAlcove"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.678, 4.467, 1.113)
use_collision = true
size = Vector3(7.13013, 9.93372, 32.7807)
